[gd_scene load_steps=11 format=3 uid="uid://dqxvcgqjx2s8o"]

[ext_resource type="Script" uid="uid://cj8v03w2i5c0r" path="res://ui/seasonal/SeasonalCouncilUI.gd" id="1_1"]
[ext_resource type="Script" uid="uid://cni5gdnpbb1v2" path="res://data/resources/SeasonalCardResource.gd" id="2_agvwj"]
[ext_resource type="Resource" uid="uid://dt38bx8jkvrno" path="res://data/resources/SpringCards/Ostara's_Blessing.tres" id="3_nc3k2"]
[ext_resource type="Resource" uid="uid://dcppndmvmf63e" path="res://data/resources/Winter Cards/Card_Winter_Recruit.tres" id="3_q5t2d"]
[ext_resource type="Resource" uid="uid://dg10eqygin8xg" path="res://data/resources/Winter Cards/Card_Winter_Feast.tres" id="4_4y4fd"]
[ext_resource type="Resource" uid="uid://du2gsa2xinlrm" path="res://data/resources/SpringCards/Early_Raid.tres" id="4_bp12f"]
[ext_resource type="Resource" uid="uid://ck0fp0wxqyxgw" path="res://data/resources/SpringCards/Great_Sowing.tres" id="5_bp12f"]
[ext_resource type="PackedScene" uid="uid://d0px2w8n5r1lv" path="res://ui/seasonal/SeasonalCardUi.tscn" id="5_f6bl8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Spine"]
bg_color = Color(0.0823529, 0.0980392, 0.14902, 0.98)
border_width_right = 2
border_color = Color(0.439216, 0.501961, 0.564706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_Title"]
bg_color = Color(0.14902, 0.168627, 0.203922, 1)
border_width_bottom = 1
border_color = Color(0.439216, 0.501961, 0.564706, 1)

[node name="SeasonalCouncilUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")
spring_council_cards = Array[ExtResource("2_agvwj")]([ExtResource("3_nc3k2"), ExtResource("4_bp12f"), ExtResource("5_bp12f")])
winter_court_cards = Array[ExtResource("2_agvwj")]([ExtResource("3_q5t2d"), ExtResource("4_4y4fd"), ExtResource("4_4y4fd"), ExtResource("3_q5t2d")])
card_prefab = ExtResource("5_f6bl8")

[node name="Vignette" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.862745)

[node name="MainSplit" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="LeftSpineBackground" type="PanelContainer" parent="MainSplit"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_Spine")

[node name="LeftSpine" type="VBoxContainer" parent="MainSplit/LeftSpineBackground"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitlePanel" type="PanelContainer" parent="MainSplit/LeftSpineBackground/LeftSpine"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_Title")

[node name="Margin" type="MarginContainer" parent="MainSplit/LeftSpineBackground/LeftSpine/TitlePanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="SeverityLabel" type="Label" parent="MainSplit/LeftSpineBackground/LeftSpine/TitlePanel/Margin"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.960784, 0.960784, 0.960784, 1)
theme_override_font_sizes/font_size = 22
text = "WINTER SEVERITY"
horizontal_alignment = 1

[node name="ContextMargin" type="MarginContainer" parent="MainSplit/LeftSpineBackground/LeftSpine"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="ContextVBox" type="VBoxContainer" parent="MainSplit/LeftSpineBackground/LeftSpine/ContextMargin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="JarlNameLabel" type="Label" parent="MainSplit/LeftSpineBackground/LeftSpine/ContextMargin/ContextVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "JARL NAME (AGE 00)"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ActionPointsLabel" type="Label" parent="MainSplit/LeftSpineBackground/LeftSpine/ContextMargin/ContextVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.890196, 0.811765, 0.490196, 1)
text = "HALL ACTIONS: 0/0"
horizontal_alignment = 1

[node name="SicknessOmenLabel" type="Label" parent="MainSplit/LeftSpineBackground/LeftSpine/ContextMargin/ContextVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.890196, 0.811765, 0.490196, 1)
text = "Sickness"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainSplit/LeftSpineBackground/LeftSpine/ContextMargin/ContextVBox"]
layout_mode = 2

[node name="ResourceTotem" type="VBoxContainer" parent="MainSplit/LeftSpineBackground/LeftSpine/ContextMargin/ContextVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="Spacer" type="Control" parent="MainSplit/LeftSpineBackground/LeftSpine"]
layout_mode = 2
size_flags_vertical = 3

[node name="DescriptionAnchor" type="MarginContainer" parent="MainSplit/LeftSpineBackground/LeftSpine"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 40

[node name="DescriptionLabel" type="Label" parent="MainSplit/LeftSpineBackground/LeftSpine/DescriptionAnchor"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 8
text = "Select a card to view details..."
autowrap_mode = 3

[node name="RitualStage" type="CenterContainer" parent="MainSplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardsContainer" type="HBoxContainer" parent="MainSplit/RitualStage"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="CouncilUIDiagnostics" type="Node" parent="."]
